--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,15 @@
       <artifactId>selenium-java</artifactId>
       <version>4.7.2</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.7.1</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
+
 
 </project>
